--- a/SimplePersistence.Model.EF/src/SimplePersistence.Model.EF/project.json
+++ b/SimplePersistence.Model.EF/src/SimplePersistence.Model.EF/project.json
@@ -12,22 +12,24 @@
   "releaseNotes": "",
 
   "frameworks": {
-    "dotnet": {
+    "dotnet54": {
       "dependencies": {
-
+        "EntityFramework.Core": "7.0.0-rc1-final"
       }
     },
     "dnxcore5": {
       "dependencies": {
-
+        "EntityFramework.Core": "7.0.0-rc1-final"
       }
     },
     "net40": {
       "dependencies": {
+        "EntityFramework": "6.0.0"
       }
     },
     "net45": {
       "dependencies": {
+        "EntityFramework": "6.0.0"
       }
     }
   },
